# travel_scraper

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
travel_scraper/: leveltravel.py  scraper.py  teztour.py  travelata.py  tutu.py  utils.py
